# autocoder

./: .gitignore  .gitleaks.toml  AGENTS.md  README.md  pyproject.toml
docs/: README.md  decisions.md  project-preferences.md  spec.md  workflows.md
src/autocoder/: _runner.py  attachments.py  claim.py  cli.py  codex.py  config.py  gh.py  git.py  instance.py  lock.py  paths.py  preflight.py  repo.py  run.py  security.py  skills.py  state.py
tests/: test_attachments.py  test_claim.py  test_cli.py  test_codex.py  test_config.py  test_gh.py  test_git_excludes.py  test_lock.py  test_preflight.py  test_repo.py  test_run_pr_flow.py  test_run_prompt.py  test_run_recovery.py  test_run_stop_cleanup.py  test_security.py  test_skills.py  test_state.py
